Tweak html to pass validator tests

--- a/coach.html
+++ b/coach.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30 height=30 alt="dandelion seed"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -39,26 +39,23 @@
                     <a class="nav-link" href="classes.html">Classes</a>
                 </li>
                 <li class="nav-item nav-padding-lg nav--active active">
-                    <a class="nav-link" href="coach.html">Your Coach <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="coach.html">Coach <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <a href="classes.html#contact">
-                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
-                        </a>
+                        <a class="btn text-center btn-outline-success my-2 my-sm-0" href="classes.html#contact">Become Mindful</a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
-                <a href="classes.html#contact">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
-                </a>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="classes.html#contact">Become Mindful</a>
             </div>
+        </div>
     </nav>
     <!-- /Navbar -->
     <!-- Header section-->
     <header class="container-fluid container-first-section-experience container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
             <div class="col-12 col-md-6 col-lg-12 text-center">
-                <h1 class="heading--5em heading--topspace">Your Coach</h2>
+                <h1 class="heading--5em heading--topspace">Your Coach</h1>
             </div>
         </div>
     </header>
@@ -137,7 +134,7 @@
             <div class="col-sm-8 text-center">
                 <form>
                     <div>
-                        <label class="sr-only" for="email">Enter your email address </label>
+                        <label class="sr-only">Enter your email address </label>
                         <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
@@ -145,13 +142,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.facebook.com/" target="new">
+                            <a target="_blank" href="http://www.facebook.com/">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.twitter.com/" target="new">
+                            <a target="_blank" href="http://www.twitter.com/">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
