--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30 height=30 alt="dandelion seed"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -40,15 +40,11 @@
                     <a class="nav-link" href="coach.html">Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <a href="classes.html#contact">
-                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
-                        </a>
+                        <a class="btn text-center btn-outline-success my-2 my-sm-0" href="classes.html#contact">Become Mindful</a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
-                <a href="classes.html#contact">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
-                </a>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="classes.html#contact">Become Mindful</a>
             </div>
         </div>
     </nav>
@@ -59,8 +55,8 @@
             <div class="col-6 col-sm-5 offset-sm-2 col-md-6 offset-md-4 offset-lg-5">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
                 <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
-                <a href="classes.html#contact">
-                    <button class="btn btn-success btn-lg btn--margintop30">Become Mindful</button>
+                <a class="btn btn-success btn-lg btn--margintop30" href="classes.html#contact">
+                    Become Mindful
                 </a>
             </div>
         </div>
@@ -84,8 +80,8 @@
                     <p>Regular mindfulness practice can lead to improved concentration and memory.</p>
                 </div>
                 <div class="col-12 text-center">
-                    <a href="benefits.html">
-                        <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
+                    <a class="btn btn-success btn-lg btn--margintop30" href="benefits.html">
+                        Read more
                     </a>
                 </div>
             </div>
@@ -101,8 +97,8 @@
                     <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
                 </div>
                 <div class="col-md-4 offset-md-8 text-center">
-                    <a href="facts.html">
-                    <button class="btn btn-success btn-lg">Read Research</button>
+                    <a class="btn btn-success btn-lg" href="facts.html">
+                    Read Research
                     </a>
                 </div>
             </div>
@@ -125,8 +121,8 @@
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            <a href="experience.html">
-                                <button class="btn btn-success btn-lg">Experience Mindfulness</button>
+                            <a class="btn btn-success btn-lg" href="experience.html">
+                                Experience Mindfulness
                             </a>
                         </div>
                     </div>
@@ -141,7 +137,7 @@
             <div class="col-sm-8 text-center">
                 <form>
                     <div>
-                        <label class="sr-only" for="email">Enter your email address </label>
+                        <label class="sr-only">Enter your email address </label>
                         <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
@@ -149,13 +145,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.facebook.com/" target="new">
+                            <a target="_blank" href="http://www.facebook.com/">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.twitter.com/" target="new">
+                            <a target="_blank" href="http://www.twitter.com/">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
