--- a/benefits.html
+++ b/benefits.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30 height=30 alt="dandelion seed"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -40,14 +40,14 @@
                     <a class="nav-link" href="coach.html">Your Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <a href="classes.html#contact">
-                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                    <a class="btn text-center btn-outline-success my-2 my-sm-0" href="classes.html#contact">
+                        Become Mindful
                         </a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
-                <a href="classes.html#contact">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="classes.html#contact">
+                Become Mindful
                 </a>
             </div>
         </div>
@@ -57,7 +57,7 @@
     <header class="container-fluid container-first-section-experience container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
             <div class="col-12 col-md-6 col-lg-12 text-center">
-                <h1 class="heading--5em heading--topspace">Benefits</h2>
+                <h1 class="heading--5em heading--topspace">Benefits</h1>
             </div>
         </div>
     </header>
@@ -69,7 +69,7 @@
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
-                            <h1 class="page-heading">Mindfulness Strengthens Self Control</h2>
+                            <h2 class="page-heading">Mindfulness Strengthens Self Control</h2>
                         </div>
                     </div>
                     <div class="row justify-content-start">
@@ -100,12 +100,12 @@
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12">
-                            <h1 class="page-heading headingspace">Mindfulness can be explained easily to children</h2>
+                            <h2 class="page-heading headingspace">Mindfulness can be explained easily to children</h2>
                         </div>
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 text-center videosize embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-frame" src="https://www.youtube.com/embed/vzKryaN44ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class="embed-responsive-frame" src="https://www.youtube.com/embed/vzKryaN44ss" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
             <div class="col-sm-8 text-center">
                 <form>
                     <div>
-                        <label class="sr-only" for="email">Enter your email address </label>
+                        <label class="sr-only">Enter your email address </label>
                         <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
@@ -128,13 +128,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.facebook.com/" target="new">
+                            <a target="_blank" href="http://www.facebook.com/">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.twitter.com/" target="new">
+                            <a target="_blank" href="http://www.twitter.com/">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
