--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30 height=30 alt="dandelion seed"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -37,22 +37,18 @@
                     <a class="nav-link" href="classes.html">Classes</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="coach.html">Your Coach</a>
+                    <a class="nav-link" href="coach.html">Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <a href="classes.html#contact">
-                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
-                        </a>
+                        <a class="btn text-center btn-outline-success my-2 my-sm-0" href="classes.html#contact">Become Mindful</a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
-                <a href="classes.html#contact">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
-                </a>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="classes.html#contact">Become Mindful</a>
             </div>
+        </div>
     </nav>
     <!-- /Navbar -->
-
     <main>
         <!-- Secondary Level Container -2- Video-->
         <section class="container-fluid container-first-section-experience container--bottom75 container-callout-dark">
@@ -61,27 +57,19 @@
                     <h1 class="heading--5em heading--topspace">Experience Mindfulness</h1>
                 </div>
                 <div class="col-12 text-center container--topbottom20 embed-responsive embed-responsive-16by9">
-                    
-  
-  
-  <iframe class="embed-reponsive-frame" src="https://www.youtube.com/embed/qFZKK7K52uQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-
+  <iframe class="embed-reponsive-frame" src="https://www.youtube.com/embed/qFZKK7K52uQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                 </div>
-
-                
             </div>
         </section>
         <!-- /Secondary Level Container -2- Video-->
-
     </main>
     <!-- Footer-->
-
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-8 text-center">
                 <form>
                     <div>
-                        <label class="sr-only" for="email">Enter your email address </label>
+                        <label class="sr-only">Enter your email address </label>
                         <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
@@ -89,13 +77,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.facebook.com/" target="new">
+                            <a target="_blank" href="http://www.facebook.com/">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.twitter.com/" target="new">
+                            <a target="_blank" href="http://www.twitter.com/">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
