--- a/facts.html
+++ b/facts.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navbar -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html ">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html ">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30 height=30 alt="dandelion seed"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -42,14 +42,14 @@
                     <a class="nav-link" href="coach.html">Your Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <a href="classes.html#contact">
-                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                    <a class="btn text-center btn-outline-success my-2 my-sm-0" href="classes.html#contact">
+                        Become Mindful
                         </a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
-                <a href="classes.html#contact">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                <a class="btn btn-outline-success my-2 my-sm-0" href="classes.html#contact">
+                Become Mindful
                 </a>
             </div>
         </div>
@@ -59,14 +59,14 @@
     <header class="container-fluid container-first-section-experience container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
             <div class="col-12 col-md-6 col-lg-12 text-center">
-                <h1 class="heading--5em heading--topspace">Facts</h2>
+                <h1 class="heading--5em heading--topspace">Facts</h1>
             </div>
         </div>
     </header>
     <!-- /Header -->
     <main>
     <!-- Top Quote-->
-    <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
+    <div class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
         <div class="row align-items-center container--translucentgradientright container--topbottom20">
             <div class="col-12">
                 <div class="row justify-content-start">
@@ -79,11 +79,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- / Top Quote-->
 
         <!-- Secondary Level Container -2- Right Aligned - Facts section-->
-        <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
+        <div class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
                 <div class="col-md-4 offset-md-8">
                     <blockquote class="blockquote text-right quote">
@@ -92,22 +92,22 @@
                     </blockquote>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
         <!-- Secondary Level Container -3- left aligned - Experience section-->
-        <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
+        <div class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
             <div class="row align-items-center container--translucentgradientright container--topbottom20">
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
                             <a href="assets/pdf/MiSP-Research-Summary-2012.pdf" target="blank">
-                                <h1><i class="fas fa-file-download downloadicon" aria-hidden="true"></i> Download Research</h1>
+                                <h2><i class="fas fa-file-download downloadicon" aria-hidden="true"></i> Download Research</h2>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- / Secondary Level Container -3- left aligned - Experience section-->
     </main>
     <!-- Footer-->
@@ -116,7 +116,7 @@
             <div class="col-sm-8 text-center">
                 <form>
                     <div>
-                        <label class="sr-only" for="email">Enter your email address </label>
+                        <label class="sr-only">Enter your email address </label>
                         <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
@@ -124,13 +124,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.facebook.com/" target="new">
+                            <a target="_blank" href="http://www.facebook.com/">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="http://www.twitter.com/" target="new">
+                            <a target="_blank" href="http://www.twitter.com/">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
