Clean up html and add comments to index.html

--- a/index.html
+++ b/index.html
@@ -61,17 +61,19 @@
         </div>
     </header>
     <!-- /Header section-->
+    <!-- main area divided in to separate sections - each section has equal semantic value-->
     <main>
         <!-- Secondary Level Container -2- Benefits section-->
         <section class="container-fluid container-first-section container--top300 container-callout-dark">
             <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
+                <!-- This row will collapse to show the heading and one benefit on medium screens (one row, above button), then stack on small screens
+                    Three benefits of mindfulness will display on large and extra large screens -->
                 <div class="col-12 col-md-6 col-lg-12 text-center">
                     <h2>Benefits of Mindful Living</h2>
                 </div>
                 <div class="col-md-6 col-lg-4 text-center container--topbottom20">
                     <p>Mindfulness can help your child become more happy and content.</p>
                 </div>
-
                 <div class="col-lg-4 text-center d-none d-lg-block">
                     <p>Reduced stress can lead to more emotional understanding, stability and better relationships.</p>
                 </div>
@@ -160,12 +162,9 @@
             </div>
         </div>
     </footer>
-
     <!-- / Footer-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
-
 </html>
